Add GET /groups/query
