# passaas/controllers/group_controller.py
@@ -15,3 +15,19 @@ def fetch_group(gid):
     if groups:
         return groups[0]._asdict()
     return ("Not found", 404)
+
+
+def query_groups(name=None, gid=None, member=[]):
+    groups = read_group()
+    if name:
+        groups = [g for g in groups if g.name == name]
+    if gid:
+        gid = int(gid)
+        groups = [g for g in groups if g.gid == gid]
+    if member:
+        for m in member:
+            groups = [g for g in groups if m in g.members]
+
+    if groups:
+        return [g._asdict() for g in groups]
+    return ("No groups matched the query", 404)
